Create header layout

--- a/index.html
+++ b/index.html
@@ -4,18 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 
-    <title></title>
+    <title>Badass Labs &#8211; Nano Shield</title>
 
     <meta name="description" content="" />
     <meta name="keywords" content="" />
-    <meta name="author" content="" />
+    <meta name="author" content="John Joaquin A. Valdez" />
 
     <link rel="icon" href="/?v=2" />
 
-    <meta name="theme-color" content="#fff" />
+    <meta name="theme-color" content="#000" />
   </head>
 
   <body>
+    <div class="special-offer-banner">
+      <div class="container">
+        <p>Special Halloween Offer &#8211; Free Delivery Over &#36;90</p>
+      </div>
+    </div>
+
+    <header class="header">
+      <div class="container">
+        <div>
+          <span class="sr-only">Badass Labs</span>
+          <img src="" alt="" />
+        </div>
+
+        <div>
+          <span class="sr-only">Shopping Cart</span>
+          <!-- shopping-cart-icon -->
+        </div>
+      </div>
+    </header>
+
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
