--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="container">
         <div>
           <span class="sr-only">Badass Labs</span>
-          <img src="" alt="" />
+          <!-- <img src="" alt="" /> -->
         </div>
 
         <div>
