Create scaffolding layouts

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="container">
         <div>
           <span class="sr-only">Badass Labs</span>
-          <!-- <img src="" alt="" /> -->
+          <img src="/images/badass-labs-type.png" alt="Badass Lab" class="header-logo" />
         </div>
 
         <div>
@@ -35,6 +35,116 @@
         </div>
       </div>
     </header>
+
+    <main>
+      <section class="product-review-section">
+        <div class="container">
+          <h1 class="large-text text-center">
+            Waterless wash, unmatched shine, and graphene nano protection for months!
+          </h1>
+
+          <div class="product-review-grid">
+            <div>
+              <div class="product-active-image"></div>
+              <div class="product-image-gallery"></div>
+            </div>
+
+            <div>
+              <div>
+                <div>
+                  <!-- ratings and feedback -->
+                </div>
+
+                <div>
+                  <!-- strong-durable-badge and made-in-europe badges -->
+                </div>
+              </div>
+
+              <ul>
+                <li>EU Lab-Engineered</li>
+                <li>Innovative Graphene Nano Technology</li>
+                <li>Easy-to-Use</li>
+                <li>Professional Detailer Priced for Enthusiast</li>
+              </ul>
+
+              <div>
+                <button>
+                  <div>Buy Nano Shield Now</div>
+                  <div>100&#37; No Risk &#8211; 30 Days Money Back Guarantee</div>
+                </button>
+              </div>
+
+              <div></div>
+
+              <div>100&#37; No Risk &#8211; 30 Days Money Back Guarantee</div>
+
+              <div>
+                <!-- payment-options -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="how-different-section">
+        <div class="container">
+          <h2 class="large-text text-center">How we are different</h2>
+          <p class="text-center">
+            Nano Shield has a groundbreaking formula that instantly makes your car stand out!
+          </p>
+
+          <div class="how-different-grid" role="grid">
+            <figure role="gridcell">
+              <img src="" alt="" />
+              <figcaption class="text-center">
+                Just spray, wipe and enjoy a car that looks brand new. Lorem Ipsum is simply dummy
+                text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+                standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                type and scrambled it to make a type specimen book. It has survived not only five
+                centuries, but also the leap into electronic typesetting, remaining essentially
+                unchanged.
+              </figcaption>
+            </figure>
+
+            <figure role="gridcell">
+              <img src="" alt="" />
+              <figcaption class="text-center">
+                Just spray, wipe and enjoy a car that looks brand new. Lorem Ipsum is simply dummy
+                text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+                standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                type and scrambled it to make a type specimen book. It has survived not only five
+                centuries, but also the leap into electronic typesetting, remaining essentially
+                unchanged.
+              </figcaption>
+            </figure>
+
+            <figure role="gridcell">
+              <img src="" alt="" />
+              <figcaption class="text-center">
+                Just spray, wipe and enjoy a car that looks brand new. Lorem Ipsum is simply dummy
+                text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+                standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                type and scrambled it to make a type specimen book. It has survived not only five
+                centuries, but also the leap into electronic typesetting, remaining essentially
+                unchanged.
+              </figcaption>
+            </figure>
+          </div>
+        </div>
+      </section>
+
+      <section class="product-overview-section">
+        <div class="container"></div>
+      </section>
+
+      <section class="product-pricing-section">
+        <div class="container"></div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="container"></div>
+    </footer>
 
     <script type="module" src="/src/main.js"></script>
   </body>
