--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
             Waterless wash, unmatched shine, and graphene nano protection for months!
           </h1>
 
-          <div class="product-review-grid">
-            <div>
+          <div class="product-review-grid" role="grid">
+            <div role="gridcell">
               <div class="product-active-image"></div>
               <div class="product-image-gallery"></div>
             </div>
 
-            <div>
+            <div role="gridcell">
               <div>
                 <div>
                   <!-- ratings and feedback -->
@@ -74,7 +74,11 @@
                 </button>
               </div>
 
-              <div></div>
+              <div>
+                <div></div>
+
+                <div>Stock is Limited: 9,367&#43; sold out of 10,000 units available!</div>
+              </div>
 
               <div>100&#37; No Risk &#8211; 30 Days Money Back Guarantee</div>
 
@@ -95,8 +99,9 @@
 
           <div class="how-different-grid" role="grid">
             <figure role="gridcell">
-              <img src="" alt="" />
-              <figcaption class="text-center">
+              <img src="/images/before-after.jpg" alt="Before and After Results" />
+              <h3 class="text-center medium-text">Easy-to-Use</h3>
+              <figcaption class="text-center small-text">
                 Just spray, wipe and enjoy a car that looks brand new. Lorem Ipsum is simply dummy
                 text of the printing and typesetting industry. Lorem Ipsum has been the industry's
                 standard dummy text ever since the 1500s, when an unknown printer took a galley of
@@ -107,26 +112,27 @@
             </figure>
 
             <figure role="gridcell">
-              <img src="" alt="" />
-              <figcaption class="text-center">
-                Just spray, wipe and enjoy a car that looks brand new. Lorem Ipsum is simply dummy
-                text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-                standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                type and scrambled it to make a type specimen book. It has survived not only five
-                centuries, but also the leap into electronic typesetting, remaining essentially
-                unchanged.
+              <img src="/images/graphene.jpg" alt="Graphene Structure" />
+              <h3 class="text-center medium-text">Last for Months</h3>
+              <figcaption class="text-center small-text">
+                We've ordered all of the products out there, every single one of them. And you know
+                what we found out? They just don't work. That's why our experts in Badass Labs
+                worked for almost 2 years to create a product that simply works! Why? Because first
+                of all we wanted our own cars to look great as we care about them and second because
+                we really wanted to give people, to give you, a real car lover, what you deserve. A
+                car that always shines, never gets dirty and simply makes you happy.
               </figcaption>
             </figure>
 
             <figure role="gridcell">
-              <img src="" alt="" />
-              <figcaption class="text-center">
-                Just spray, wipe and enjoy a car that looks brand new. Lorem Ipsum is simply dummy
-                text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-                standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                type and scrambled it to make a type specimen book. It has survived not only five
-                centuries, but also the leap into electronic typesetting, remaining essentially
-                unchanged.
+              <img src="/images/car-layers.jpg" alt="Car Layers" />
+              <h3 class="text-center medium-text">Catches the Eyes</h3>
+              <figcaption class="text-center small-text">
+                Our special 3 layer graphene nano formula. Lorem Ipsum is simply dummy text of the
+                printing and typesetting industry. Lorem Ipsum has been the industry's standard
+                dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book. It has survived not only five centuries,
+                but also the leap into electronic typesetting, remaining essentially unchanged.
               </figcaption>
             </figure>
           </div>
