Remove `shrink-to-fit=no`

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Badass Labs &#8211; Nano Shield</title>
 
@@ -93,7 +93,7 @@
       <section class="how-different-section">
         <div class="container">
           <h2 class="large-text text-center">How we are different</h2>
-          <p class="text-center">
+          <p class="text-center small-text how-different-description">
             Nano Shield has a groundbreaking formula that instantly makes your car stand out!
           </p>
 
