--- a/index.html
+++ b/index.html
@@ -149,7 +149,35 @@
     </main>
 
     <footer class="footer">
-      <div class="container"></div>
+      <div class="container">
+        <h2 class="text-center">30 Day Money-Back Guarantee it works or you don't pay</h2>
+        <p class="text-center small-text">
+          We want you to be 100% satisfied with everything you buy from ShineArmor. And if&nbsp;
+          you're not entirely happy with your purchase we will refund your money in full, or&nbsp;
+          exchange the goods. All we ask is that you contact our customer services and then&nbsp;
+          return the liquid coat back to us.
+        </p>
+
+        <button>
+          <div>Buy Nano Shield Now</div>
+          <div class="arrow-right-icon">
+            <span class="sr-only">Arrow right icon</span>
+          </div>
+        </button>
+
+        <img src="/images/badass-labs-type.png" alt="Badass Labs" class="footer-logo" />
+
+        <nav class="footer-nav">
+          <a href="/">Privacy Policy</a>
+          <a href="/">Refund Policy</a>
+          <a href="/">Terms and Conditions</a>
+          <a href="/">Notice at Collection</a>
+        </nav>
+
+        <p class="text-center footer-copyright">
+          &copy; 2022 Bad Ass Labs, LLC. All Rights Reserved.
+        </p>
+      </div>
     </footer>
 
     <script type="module" src="/src/main.js"></script>
