Update footer layout

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Badass Labs &#8211; Nano Shield</title>
+    <title>Bad Ass Labs &#8211; Nano Shield</title>
 
     <meta name="description" content="" />
     <meta name="keywords" content="" />
@@ -25,8 +25,8 @@
     <header class="header">
       <div class="container">
         <div>
-          <span class="sr-only">Badass Labs</span>
-          <img src="/images/badass-labs-type.png" alt="Badass Lab" class="header-logo" />
+          <span class="sr-only">Bad Ass Labs</span>
+          <img src="/images/badass-labs-type.png" alt="Bad Ass Lab" class="header-logo" />
         </div>
 
         <div>
@@ -60,7 +60,7 @@
                 </div>
               </div>
 
-              <ul>
+              <ul class="product-detail-list">
                 <li>EU Lab-Engineered</li>
                 <li>Innovative Graphene Nano Technology</li>
                 <li>Easy-to-Use</li>
@@ -150,22 +150,25 @@
 
     <footer class="footer">
       <div class="container">
-        <h2 class="text-center">30 Day Money-Back Guarantee it works or you don't pay</h2>
-        <p class="text-center small-text">
-          We want you to be 100% satisfied with everything you buy from ShineArmor. And if&nbsp;
-          you're not entirely happy with your purchase we will refund your money in full, or&nbsp;
-          exchange the goods. All we ask is that you contact our customer services and then&nbsp;
-          return the liquid coat back to us.
+        <h2 class="text-center footer-heading">
+          30 Day Money-Back Guarantee it works or you don't pay
+        </h2>
+
+        <p class="text-center small-text footer-description">
+          We want you to be 100% satisfied with everything you buy from ShineArmor. And if you're
+          not entirely happy with your purchase we will refund your money in full, or exchange the
+          goods. All we ask is that you contact our customer services and then return the liquid
+          coat back to us.
         </p>
 
-        <button>
-          <div>Buy Nano Shield Now</div>
+        <button class="footer-cta">
+          <div class="cta-text">Buy Nano Shield Now</div>
           <div class="arrow-right-icon">
             <span class="sr-only">Arrow right icon</span>
           </div>
         </button>
 
-        <img src="/images/badass-labs-type.png" alt="Badass Labs" class="footer-logo" />
+        <img src="/images/badass-labs-type.png" alt="Bad Ass Labs" class="footer-logo" />
 
         <nav class="footer-nav">
           <a href="/">Privacy Policy</a>
