--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <meta name="keywords" content="" />
     <meta name="author" content="John Joaquin A. Valdez" />
 
-    <link rel="icon" href="/?v=2" />
-
     <meta name="theme-color" content="#000" />
   </head>
 
@@ -45,18 +43,42 @@
 
           <div class="product-review-grid" role="grid">
             <div role="gridcell">
-              <div class="product-active-image"></div>
+              <div class="product-active-image">
+                <!-- <img src="/images/nano-shield-big.jpeg" alt="" /> -->
+              </div>
+
               <div class="product-image-gallery"></div>
             </div>
 
             <div role="gridcell">
-              <div>
+              <div class="product-feedback-row">
                 <div>
-                  <!-- ratings and feedback -->
+                  <div>
+                    <!-- stars -->
+                    <div>1,390 Reviews</div>
+                  </div>
+
+                  <p class="small-text product-review-feedback">
+                    "I was extremely sceptical about buying car care products. I finally decided to
+                    do my own research and found Nano Shield. I’ve never had more people ask me if I
+                    got a new car when my car is actually 7 years old!!!" &#8211; Shane J.
+                  </p>
                 </div>
 
-                <div>
-                  <!-- strong-durable-badge and made-in-europe badges -->
+                <div class="product-badge-icons">
+                  <span class="sr-only">Strong Durable Graphene</span>
+                  <img
+                    src="/images/strong-durable-graphene.png"
+                    alt="Strong Durable Graphene"
+                    class="product-badge"
+                  />
+
+                  <span class="sr-only">Made in Europe</span>
+                  <img
+                    src="/images/made-in-europe.png"
+                    alt="Made in Europe"
+                    class="product-badge"
+                  />
                 </div>
               </div>
 
@@ -67,12 +89,10 @@
                 <li>Professional Detailer Priced for Enthusiast</li>
               </ul>
 
-              <div>
-                <button>
-                  <div>Buy Nano Shield Now</div>
-                  <div>100&#37; No Risk &#8211; 30 Days Money Back Guarantee</div>
-                </button>
-              </div>
+              <button class="product-review-cta">
+                <div>Buy Nano Shield Now</div>
+                <div>100&#37; No Risk &#8211; 30 Days Money Back Guarantee</div>
+              </button>
 
               <div>
                 <div></div>
