--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Bad Ass Labs &#8211; Nano Shield</title>
-
-    <meta name="description" content="" />
+    <meta name="description" content="Bad Ass Labs - Nano Shield" />
     <meta name="keywords" content="" />
     <meta name="author" content="John Joaquin A. Valdez" />
-
+    <link rel="icon" href="/?v=2.0" />
     <meta name="theme-color" content="#000" />
   </head>
 
@@ -24,7 +22,7 @@
       <div class="container">
         <div>
           <span class="sr-only">Bad Ass Labs</span>
-          <img src="/images/badass-labs-type.png" alt="Bad Ass Lab" class="header-logo" />
+          <img src="/images/badass-labs-type.png" alt="Bad Ass Labs" class="header-logo" />
         </div>
 
         <div>
@@ -110,6 +108,38 @@
         </div>
       </section>
 
+      <section class="about-us">
+        <div class="container">
+          <div class="about-us-grid" role="grid">
+            <div role="gridcell">
+              <img src="/images/car.jpeg" alt="Car" class="car-image" />
+            </div>
+
+            <div role="gridcell">
+              <h2 class="large-text">
+                Detailing has never been easier, catch all the looks after 10 mins application
+              </h2>
+
+              <p class="small-text">
+                Our Badass Labs scientists developed the only Nano Protective Formula on the market.
+                A home detailing product that uses waterless nanotechnology enhanced with graphene
+                and other wetting agents to securely, safely, and ultimately protect your car from
+                dirt, grease, grime, and even minor scratches on contact. It will be leaving you
+                with a clean, sealed, and protected surface every time.
+              </p>
+            </div>
+          </div>
+
+          <button class="cta">
+            <div>Buy Nano Shield Now</div>
+            <div>
+              <span class="sr-only">Arrow right icon</span>
+              <!-- insert the icon here -->
+            </div>
+          </button>
+        </div>
+      </section>
+
       <section class="how-different-section">
         <div class="container">
           <h2 class="large-text text-center">How we are different</h2>
@@ -164,7 +194,29 @@
       </section>
 
       <section class="product-pricing-section">
-        <div class="container"></div>
+        <div class="container">
+          <div class="product-pricing-table" role="grid">
+            <div class="product-pricing-item" role="gridcell">
+              <h2 class="product-pricing-name">
+                1 Bottle
+                <br />
+                NanoShield 3x
+              </h2>
+
+              <!-- <img src="" alt="1 Bottle NanoShield 3x" /> -->
+
+              <div class="product-pricing-price">
+                <span>Reg &#36;22.95</span>
+                <span>&#36;62.85</span>
+                <span>/ each</span>
+              </div>
+
+              <div class="product-pricing-save">Save &#36;2</div>
+              <div>100&#37; No Risk &#8211; 30 Days Money Back Guarantee</div>
+              <button>Buy it now</button>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
 
