Update class name

--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
         </div>
       </section>
 
-      <section class="about-us">
+      <section class="about-us-section">
         <div class="container">
           <div class="about-us-grid" role="grid">
             <div role="gridcell">
-              <img src="/images/car.jpeg" alt="Car" class="car-image" />
+              <img src="/images/car.jpeg" alt="Car" class="rounded-xl" />
             </div>
 
             <div role="gridcell">
