Update footer section

--- a/index.html
+++ b/index.html
@@ -233,9 +233,7 @@
 
     <footer class="footer">
       <div class="container">
-        <h2 class="text-center footer-heading">
-          30 Day Money-Back Guarantee it works or you don't pay
-        </h2>
+        <h2 class="footer-headline">30 Day Money-Back Guarantee it works or you don't pay</h2>
 
         <p class="text-center small-text footer-description">
           We want you to be 100% satisfied with everything you buy from ShineArmor. And if you're
@@ -260,9 +258,7 @@
           <a href="/">Notice at Collection</a>
         </nav>
 
-        <p class="text-center footer-copyright">
-          &copy; 2022 Bad Ass Labs, LLC. All Rights Reserved.
-        </p>
+        <p class="footer-copyright">&copy; 2022 Bad Ass Labs, LLC. All Rights Reserved.</p>
       </div>
     </footer>
 
