Create pricing table layout

--- a/index.html
+++ b/index.html
@@ -204,8 +204,106 @@
         </div>
       </section>
 
-      <section class="product-pricing-section">
-        <div class="container"></div>
+      <section class="product-pricing">
+        <div class="container">
+          <div class="pricing-card-grid" role="grid">
+            <div role="gridcell">
+              <div class="pricing-card">
+                <h2 class="pricing-card__name">
+                  1 Bottle
+                  <br />
+                  NanoShield 3x
+                </h2>
+
+                <img src="" alt="" class="pricing-card__image" />
+
+                <div class="pricing-card__price"></div>
+
+                <div class="pricing-card__save">Save &#36;2</div>
+
+                <div class="pricing-card__note">
+                  100&#37; No Risk &#8211; 30 Days Money Back Guarantee
+                </div>
+
+                <button class="pricing-card__button">Buy it now</button>
+              </div>
+            </div>
+
+            <div role="gridcell">
+              <div class="pricing-card">
+                <div class="pricing-card__best best--value">Best Value</div>
+
+                <h2 class="pricing-card__name">
+                  4 Bottles
+                  <br />
+                  NanoShield 3x
+                </h2>
+
+                <img src="" alt="" class="pricing-card__image" />
+
+                <div class="pricing-card__price"></div>
+
+                <div class="pricing-card__save">Save &#36;16</div>
+
+                <div class="pricing-card__note">
+                  100&#37; No Risk &#8211; 30 Days Money Back Guarantee
+                </div>
+
+                <div class="pricing-card__shipping">&#43; Free Shipping</div>
+
+                <button class="pricing-card__button">Buy it now</button>
+              </div>
+            </div>
+
+            <div role="gridcell">
+              <div class="pricing-card">
+                <div class="pricing-card__best best--seller">Best Seller</div>
+
+                <h2 class="pricing-card__name">
+                  3 Bottles
+                  <br />
+                  NanoShield 3x
+                </h2>
+
+                <img src="" alt="" class="pricing-card__image" />
+
+                <div class="pricing-card__price"></div>
+
+                <div class="pricing-card__save">Save &#36;2</div>
+
+                <div class="pricing-card__note">
+                  100&#37; No Risk &#8211; 30 Days Money Back Guarantee
+                </div>
+
+                <div class="pricing-card__shipping">&#43; Free Shipping</div>
+
+                <button class="pricing-card__button">Buy it now</button>
+              </div>
+            </div>
+
+            <div role="gridcell">
+              <div class="pricing-card">
+                <h2 class="pricing-card__name">
+                  2 Bottles
+                  <br />
+                  NanoShield 3x
+                </h2>
+
+                <img src="" alt="" class="pricing-card__image" />
+
+                <div class="pricing-card__price"></div>
+
+                <div class="pricing-card__save">Save &#36;2</div>
+
+                <div class="pricing-card__note">
+                  100&#37; No Risk &#8211; 30 Days Money Back Guarantee
+                </div>
+
+                <button class="pricing-card__button">Buy it now</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
 
