Comment img tags

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                   NanoShield 3x
                 </h2>
 
-                <img src="" alt="" class="pricing-card__image" />
+                <!-- <img src="" alt="" class="pricing-card__image" /> -->
 
                 <div class="pricing-card__price"></div>
 
@@ -239,7 +239,7 @@
                   NanoShield 3x
                 </h2>
 
-                <img src="" alt="" class="pricing-card__image" />
+                <!-- <img src="" alt="" class="pricing-card__image" /> -->
 
                 <div class="pricing-card__price"></div>
 
@@ -265,7 +265,7 @@
                   NanoShield 3x
                 </h2>
 
-                <img src="" alt="" class="pricing-card__image" />
+                <!-- <img src="" alt="" class="pricing-card__image" /> -->
 
                 <div class="pricing-card__price"></div>
 
@@ -289,7 +289,7 @@
                   NanoShield 3x
                 </h2>
 
-                <img src="" alt="" class="pricing-card__image" />
+                <!-- <img src="" alt="" class="pricing-card__image" /> -->
 
                 <div class="pricing-card__price"></div>
 
